--- a/quinzena3/sistema-loja/style.css
+++ b/quinzena3/sistema-loja/style.css
@@ -3,24 +3,19 @@ body {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   margin: 0;
   font-weight: 400;
-  background: radial-gradient(
-    circle,
-    rgba(131, 58, 180, 1) 0%,
-    rgba(16, 75, 11, 0.896796218487395) 0%,
-    rgba(229, 241, 209, 0.4290091036414566) 100%
-  );
+  background: rgba(2, 0, 36, 0.322);
 }
 
 header {
   background: rgb(131, 58, 180);
   background: linear-gradient(
     90deg,
-    rgba(131, 58, 180, 1) 0%,
-    rgba(16, 75, 11, 0.896796218487395) 0%,
-    rgba(186, 252, 69, 0.9023984593837535) 100%
+    rgba(2, 0, 36, 1) 0%,
+    rgba(121, 9, 120, 0.6811099439775911) 35%,
+    rgba(0, 121, 255, 1) 100%
   );
   padding: 20px;
-  box-shadow: 10px 5px 5px olive;
+  box-shadow: 10px 10px 15px 15px rgba(0, 0, 0, 0.438);
 }
 
 header .menu {
@@ -37,9 +32,20 @@ header .bemvindo {
   background-color: rgba(255, 250, 240, 0.527);
   border-radius: 20px;
   padding: 20px 20px;
-  width: 700px;
+  width: 95%;
   margin: 0 auto;
   text-align: center;
+}
+
+header .letreiro {
+  display: inline-block;
+  color: rgba(14, 11, 4, 0.527);
+}
+
+header .bemvindo img {
+  width: 60px;
+  height: 100px;
+  padding-left: 30px;
 }
 
 .content {
@@ -51,21 +57,39 @@ header .bemvindo {
   border-radius: 20px;
   background-color: rgba(255, 250, 240, 0.527);
   font-weight: 400;
-
 }
 
-.content img{
+.content img {
   border-radius: 10px;
 }
 
 .content h1 {
   text-align: center;
 }
-.descricao {
-}
 
 .banner {
   width: 500px;
   height: 500px;
   margin-left: 10px;
+}
+
+footer {
+  height: 200px;
+  width: 95%;
+  background: linear-gradient(
+    90deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(121, 9, 120, 0.6811099439775911) 35%,
+    rgba(0, 121, 255, 1) 100%
+  );
+  text-align: center;
+  padding: 30px;
+  color: rgba(255, 250, 240, 0.527);
+  box-shadow: 10px 10px 15px 15px rgba(0, 0, 0, 0.438);
+}
+
+footer img {
+  width: 50px;
+  height: 50px;
+  padding: 30px 20px;
 }
