--- a/quinzena3/sistema-loja/style.css
+++ b/quinzena3/sistema-loja/style.css
@@ -1,4 +1,7 @@
+/* -------------------------------- UNIVERSAIS ------------------------------ */
+
 body {
+  height: 100%;
   color: black;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -57,7 +60,27 @@ header .bemvindo img {
   text-align: center;
 }
 
-.descricao{
+footer {
+  height: 200px;
+  background: antiquewhite;
+
+  text-align: center;
+  padding: 30px;
+  color: rgb(59, 59, 59);
+  margin-bottom: 0px;
+}
+
+footer img {
+  width: 50px;
+  height: 50px;
+  padding: 30px 20px;
+}
+
+/*  ---------------------------------------------- */
+
+/* Index */
+
+.descricao {
   width: 800px;
   margin: 0 auto;
 }
@@ -67,22 +90,6 @@ header .bemvindo img {
   height: 200px;
   margin: 10px;
   border-radius: 10px;
-}
-
-footer {
-  height: 200px;
-  background: antiquewhite;
-
-  text-align: center;
-  padding: 30px;
-  color: rgb(59, 59, 59);
-  margin: 0 auto;
-}
-
-footer img {
-  width: 50px;
-  height: 50px;
-  padding: 30px 20px;
 }
 
 /* Controle de Estoque */
@@ -99,14 +106,17 @@ tr td img {
   border-radius: 30px;
 }
 
-.impar{
+.impar {
   background: rgba(255, 127, 80, 0.541);
-
 }
+
+
 
 /* Adicionar Produto */
 form {
+  padding-top: 5%;
   width: 63%;
+  height: 100%;
   text-align: right;
 }
 
@@ -121,14 +131,17 @@ form {
   margin-right: 0;
 }
 
+.produto{
+  height: 38.5vh;
+}
+
 /* Funcionários */
 .staff {
   text-align: center;
+  padding: 1%;
 }
-.staff li{
+.staff li {
   list-style: none;
   padding: 15px;
   text-align: center;
 }
-
-
