--- a/quinzena3/sistema-loja/style.css
+++ b/quinzena3/sistema-loja/style.css
@@ -7,15 +7,17 @@ body {
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   margin: 0;
   font-weight: 400;
-  background: linear-gradient(
+/*   background: linear-gradient(
     0deg,
     rgba(93, 25, 63, 0.8211659663865546) 38%,
     rgba(195, 34, 34, 0.5942752100840336) 64%
-  );
+  ); */
+
+  background: url("img/bg.jpg");
 }
 
 header {
-  background: antiquewhite;
+  background: rgba(250, 235, 215, 0.959);
   padding: 20px;
   box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.438);
 }
@@ -28,6 +30,14 @@ header a {
   text-decoration: none;
   margin-left: 10px;
   color: rgb(59, 59, 59);
+  width: 100%;
+  height: 100%;
+}
+
+header a:hover{
+  transition: all 1s;
+  background: chocolate;
+  color: white;
 }
 
 header .bemvindo {
@@ -91,6 +101,7 @@ footer img {
   margin: 10px;
   border-radius: 10px;
 }
+
 
 /* Controle de Estoque */
 
