--- a/quinzena3/bugfixes/index.css
+++ b/quinzena3/bugfixes/index.css
@@ -68,6 +68,7 @@ div img {
 #container-de-descricao {
   background-color: #2274a5;
   color: white;
+  padding: 100px 50px;
 }
 
 #container-de-descricao > ol {
