--- a/quinzena3/bugfixes/index.css
+++ b/quinzena3/bugfixes/index.css
@@ -33,9 +33,7 @@ div > p:first-child {
   display: inline;
 }
 
-div img {
-  background: black;
-}
+
 
 .botao-amarelo {
   background-color: #ffaf43;
@@ -56,6 +54,7 @@ div img {
 }
 
 .icone {
+  width: 15px;
   height: 15px;
 }
 
