--- a/quinzena3/bugfixes/index.css
+++ b/quinzena3/bugfixes/index.css
@@ -34,15 +34,19 @@ div > p:first-child {
 }
 
 
-
 .botao-amarelo {
   background-color: #ffaf43;
   width: 250px;
   height: 40px;
-  border-radius: 5px;
   font-size: 20px;
   color: white;
+
+  border: none;
+  transition: 1s;
+  border-end-end-radius: 10px ;
+  border-start-start-radius: 10px;
 }
+
 
 .botao-amarelo:hover {
   background-color: #c44f00;
@@ -113,6 +117,12 @@ td button {
   height: 30px;
   border-radius: 5px;
   color: black;
+  border: none;
+}
+
+td button:hover{
+  background-color: #fe7e02;
+  color: wheat;
 }
 
 .container-do-search {
