--- a/quinzena3/bugfixes/index.css
+++ b/quinzena3/bugfixes/index.css
@@ -19,7 +19,12 @@ h2 {
 input {
   height: 20px;
   width: 500px;
+  border-top: none;
+  border-right: none;
+  border-left: none;
+
 }
+
 
 button:focus {
   color: white;
